--- a/client/package.json
+++ b/client/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "app",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "DOMAIN=localhost next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -14,7 +14,11 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^12.1.0",
+    "@types/node": "17.0.21",
+    "@types/react": "17.0.40",
     "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0"
+    "eslint-config-next": "12.1.0",
+    "typescript": "4.6.2"
   }
 }
