--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,21 @@
   },
   "dependencies": {
     "color": "^4.2.1",
+    "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "next": "12.1.0",
+    "query-string": "^7.1.1",
+    "quill": "^1.3.7",
     "react": "17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-content-loader": "^6.2.0",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.3"
+    "react-textarea-autosize": "^8.3.3",
+    "react-transition-group": "^4.4.2",
+    "styled-components": "^5.3.3",
+    "sweet-pubsub": "^1.1.2"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.1.0",
