--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "client-2",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "DOMAIN=localhost next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -15,7 +15,6 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "next": "12.1.0",
-    "prop-types": "^15.8.1",
     "query-string": "^7.1.1",
     "quill": "^1.3.7",
     "react": "17.0.2",
@@ -28,10 +27,17 @@
     "sweet-pubsub": "^1.1.2"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-do-expressions": "^7.16.7",
     "@next/bundle-analyzer": "^12.1.0",
-    "babel-preset-next": "^1.4.0",
+    "@types/color": "^3.0.3",
+    "@types/lodash": "^4.14.180",
+    "@types/node": "17.0.21",
+    "@types/react": "17.0.40",
+    "@types/react-transition-group": "^4.4.4",
+    "@types/styled-components": "^5.1.24",
+    "@types/sweet-pubsub": "^1.1.0",
     "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0"
+    "eslint-config-next": "12.1.0",
+    "sass": "^1.49.9",
+    "typescript": "4.6.2"
   }
 }
