--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,11 +1,3 @@
 {
-  "extends": [
-    "next",
-    "next/core-web-vitals",
-    "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended"
-  ],
-  "rules": {
-    "@typescript-eslint/explicit-module-boundary-types": "off"
-  }
+  "extends": ["next/babel","next/core-web-vitals"]
 }
