--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,4 +1,16 @@
 {
-  "presets": ["next/babel"],
-  "plugins": ["babel-plugin-styled-components", "@babel/plugin-proposal-do-expressions"]
+  "presets": [
+    "next/babel"
+  ],
+  "plugins": [
+    [
+      "babel-plugin-styled-components",
+      {
+        "ssr": true,
+        "displayName": true,
+        "preprocess": false
+      }
+    ],
+    "@babel/plugin-proposal-do-expressions"
+  ]
 }
