--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,16 @@ services:
     restart: always
     # environment:
     #   DOMAIN: Gin
+  db:
+    image: mysql
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+    ports:
+      - 3306:3306
+    volumes:
+      - "${MYSQL_DATA}:/var/lib/mysql"
   proxy:
     container_name: Nginx
     image: nginx:1.21-alpine
@@ -18,3 +28,4 @@ services:
       - "./nginx/nginx.conf.template:/etc/nginx/templates/default.conf.template"
     depends_on:
       - web
+  
