--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: "jira"
     ports:
       - 3306:3306
     volumes:
