--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     # environment:
     #   DOMAIN: Gin
   db:
+    container_name: Mysql
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
     restart: always
