--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -2,14 +2,11 @@ version: '3.9'
 
 services:
   db:
-    image: mysql
-    command: --default-authentication-plugin=mysql_native_password
+    image: mysql/mysql-server:5.7
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: "jira"
     ports:
       - 3306:3306
     volumes:
-      - "./data:/var/lib/mysql"
       - "./migrations:/docker-entrypoint-initdb.d"
