--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,16 +6,16 @@ services:
     restart: always
     # environment:
     #   DOMAIN: Gin
-  db:
-    container_name: Mysql
-    image: mysql/mysql-server
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-    ports:
-      - 3306:3306
-    volumes:
-      - "${MYSQL_MIGRATION_FILES_PATH}:docker-entrypoint-initdb.d"
+  # db:
+  #   container_name: Mysql
+  #   image: mysql/mysql-server
+  #   restart: always
+  #   environment:
+  #     MYSQL_ROOT_PASSWORD: root
+  #   ports:
+  #     - 3306:3306
+  #   volumes:
+  #     - "${MYSQL_MIGRATION_FILES_PATH}:docker-entrypoint-initdb.d"
   proxy:
     container_name: Nginx
     image: nginx:1.21-alpine
