--- a/client/dockerfile
+++ b/client/dockerfile
@@ -2,6 +2,7 @@
 FROM node:16-alpine AS deps
 WORKDIR /app
 COPY . .
+RUN rm -rf package-lock.json
 RUN npm i
 
 # Rebuild the source code only when needed
@@ -12,6 +13,7 @@ ENV NODE_ENV production
 
 COPY . .
 COPY --from=deps /app/node_modules ./node_modules
+RUN rm -rf .next
 RUN npm run build
 
 # Production image, copy all the files and run next
