--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -6,7 +6,10 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: "jira_db"
+      MYSQL_DATABASE: jira_db
+      MYSQL_USER: test
+      MYSQL_PASSWORD: test_pass
+      MYSQL_ROOT_HOST: '%'  # needs to be enclosed with quotes
     ports:
       - 3306:3306
     volumes:
