--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.9'
 services:
   db:
     image: mysql/mysql-server
+    command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
