--- a/client/.babelrc
+++ b/client/.babelrc
@@ -3,6 +3,14 @@
     "next/babel"
   ],
   "plugins": [
+    [
+      "babel-plugin-styled-components",
+      {
+        "ssr": true,
+        "displayName": true,
+        "preprocess": false
+      }
+    ],
     "@babel/plugin-proposal-do-expressions"
   ]
 }
