--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "color": "^4.2.1",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
