--- a/api/pom.xml
+++ b/api/pom.xml
@@ -65,6 +65,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>api</finalName>
 	</build>
 
 </project>
