dev api dockerfile

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,18 @@ DOMAIN=localhost
 # msqyl
 MYSQL_DATA=./db/data
 MYSQL_MIGRATION_FILES_PATH=./db/migrations
-MYSQL_DB=jira
+MYSQL_ROOT_PASSWORD = root
+MYSQL_DB= jira_db
+MYSQL_USER= test
+MYSQL_PASSWORD= test_pass
+MYSQL_ROOT_HOST= '%'  # needs to be enclosed with quotes
+MYSQL_PORT = 3306
 
 # next.js web app
-WEB_IMAGE=jira
+WEB_IMAGE=jira/client
 WEB_IMAGE_VERSION=latest
+
+# api server
+SERVER_IMAGE=jira/api
+SERVER_IMAGE_VERSION=latest
+SERVER_PORT=80
