--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -14,9 +14,10 @@ spring.security.user.password=123456
 
 #context-path
 server.servlet.context-path=/jira
+server.port=80
 
 #DB connect info
-spring.datasource.url=jdbc:mysql://localhost:80/jira_db?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/jira_db?useSSL=false&serverTimezone=UTC
 spring.datasource.username=test
 spring.datasource.password=test_pass
 
