--- a/.env.example
+++ b/.env.example
@@ -5,10 +5,10 @@ DOMAIN=localhost
 MYSQL_DATA=./db/data
 MYSQL_MIGRATION_FILES_PATH=./db/migrations
 MYSQL_ROOT_PASSWORD = root
-MYSQL_DB= jira_db
-MYSQL_USER= test
-MYSQL_PASSWORD= test_pass
-MYSQL_ROOT_HOST= '%'  # needs to be enclosed with quotes
+MYSQL_DB=jira_db
+MYSQL_USER=test
+MYSQL_PASSWORD=test_pass
+MYSQL_ROOT_HOST='%'  # needs to be enclosed with quotes
 MYSQL_PORT = 3306
 
 # next.js web app
