--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,19 +9,20 @@ services:
   db:
     container_name: db
     image: mysql/mysql-server
+    command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
-      MYSQL_DATABASE: "${MYSQL_DB}"
-      MYSQL_USER: "${MYSQL_USER}"
-      MYSQL_PASSWORD: "${MYSQL_PASSWORD}"
-      MYSQL_ROOT_HOST: "${MYSQL_ROOT_HOST}"
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: jira_db
+      MYSQL_USER: test
+      MYSQL_PASSWORD: test_pass
+      MYSQL_ROOT_HOST: '%'  # needs to be enclosed with quotes
     ports:
-      - ${MYSQL_PORT}:3306
+      - 3306:3306
     volumes:
-      - "${MYSQL_MIGRATION_FILES_PATH}:/docker-entrypoint-initdb.d"
+      - "./migrations:/docker-entrypoint-initdb.d"
   server:
-    container_name: api
+    container_name: jira
     image: "${SERVER_IMAGE}:${SERVER_IMAGE_VERSION}"
     restart: always
     depends_on:
