--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -17,7 +17,7 @@ server.servlet.context-path=/jira
 server.port=80
 
 #DB connect info
-spring.datasource.url=jdbc:mysql://localhost:3306/jira_db?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://db:3306/jira_db?useSSL=false&serverTimezone=UTC
 spring.datasource.username=test
 spring.datasource.password=test_pass
 
