--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -21,4 +21,4 @@ spring.datasource.url=jdbc:mysql://db:3306/jira_db?useSSL=false&serverTimezone=U
 spring.datasource.username=test
 spring.datasource.password=test_pass
 
-testValue=Alix
+testValue=Alix2
