--- a/api/pom.xml
+++ b/api/pom.xml
@@ -15,6 +15,25 @@
 	<properties>
 		<java.version>8</java.version>
 	</properties>
+	
+	<profiles>
+	    <profile>
+	        <id>dev</id>
+	        <properties>
+	            <profile.active>dev</profile.active>
+	        </properties>
+	        <activation>
+	            <activeByDefault>true</activeByDefault>
+	        </activation>
+	    </profile>
+	    <profile>
+	        <id>prod</id>
+	        <properties>
+	            <profile.active>prod</profile.active>
+	        </properties>
+	    </profile>
+	</profiles>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
