--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.profiles.active= @profile.active@
 #Actuator
 management.endpoints.jmx.exposure.include=*
 management.endpoints.web.exposure.include=*
@@ -16,9 +17,4 @@ spring.security.user.password=123456
 server.servlet.context-path=/jira
 server.port=80
 
-#DB connect info
-spring.datasource.url=jdbc:mysql://db:3306/jira_db?useSSL=false&serverTimezone=UTC
-spring.datasource.username=test
-spring.datasource.password=test_pass
-
-testValue=Alix2
+testValue=Alix
