--- a/api/src/main/resources/application-dev.properties
+++ b/api/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-#DB connect info
+#DB connect info ( local database )
 spring.datasource.url=jdbc:mysql://localhost:3306/jira_db?useSSL=false&serverTimezone=UTC
 spring.datasource.username=test
 spring.datasource.password=test_pass
