--- a/api/src/main/resources/application-prod.properties
+++ b/api/src/main/resources/application-prod.properties
@@ -1,4 +1,7 @@
-#DB connect info
+#DB connect info ( docker container name )
 spring.datasource.url=jdbc:mysql://db:3306/jira_db?useSSL=false&serverTimezone=UTC
 spring.datasource.username=test
 spring.datasource.password=test_pass
+
+#prod use 80 port
+server.port=80
