--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /app
 COPY . .
 RUN rm -rf target
 RUN chmod -R 777 ./
-RUN mvn clean compile package -Pprod
+RUN mvn clean install -DskipTests -Pprod
 
 
 FROM openjdk:8-jdk-alpine AS runner
@@ -11,7 +11,9 @@ WORKDIR /app
 RUN addgroup -S spring && adduser -S spring -G spring
 
 COPY --from=builder /app/target/api.jar .
+RUN sh -c 'touch api.jar'
 USER spring:spring
 
-
 ENTRYPOINT ["java","-jar","./api.jar"]
+
+EXPOSE 80
