--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     container_name: jira
     image: jira/api:latest
     restart: always
+    environment:
+      - TZ: Asia/Taipei
     depends_on:
       - db
     ports:
