--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     image: jira/api:latest
     restart: always
     environment:
-      - TZ: Asia/Taipei
+      TZ: Asia/Taipei
     depends_on:
       - db
     ports:
@@ -17,6 +17,7 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
+      TZ: Asia/Taipei
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: jira_db
       MYSQL_USER: test
