--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
+      TZ: Asia/Taipei
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: jira_db
       MYSQL_USER: test
@@ -25,6 +26,8 @@ services:
     container_name: jira
     image: "${SERVER_IMAGE}:${SERVER_IMAGE_VERSION}"
     restart: always
+    environment:
+      TZ: Asia/Taipei
     depends_on:
       - db
   proxy:
