--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     environment:
+      TZ: Asia/Taipei
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: jira_db
       MYSQL_USER: test
