--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-content-loader": "^6.2.0",
     "react-dom": "17.0.2",
+    "react-router-dom": "^6.2.2",
     "react-textarea-autosize": "^8.3.3",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.3",
