--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -7,7 +7,19 @@ management.info.env.enabled = true
 info.app.name=jira
 
 #log level
-#logging.level.com.jira=INFO
+logging.level.com.jira=TRACE
+logging.level.root=INFO
+
+#SQL log
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql=trace
+
+#connection pool setting
+spring.datasource.initial-size=5
+spring.datasource.min-idle=5
+spring.datasource.max-idle=10
+spring.datasource.max-wait=10000
 
 #security
 spring.security.user.name=admin
