--- a/client/package.json
+++ b/client/package.json
@@ -1,41 +1,11 @@
 {
   "name": "client",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "axios": "^0.26.1",
-    "color": "^4.2.1",
-    "formik": "^2.2.9",
-    "jwt-decode": "^3.1.2",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.1",
-    "next": "12.1.0",
-    "prop-types": "^15.8.1",
-    "query-string": "^7.1.1",
-    "quill": "^1.3.7",
-    "react": "17.0.2",
-    "react-beautiful-dnd": "^13.1.0",
-    "react-content-loader": "^6.2.0",
-    "react-dom": "17.0.2",
-    "react-router-dom": "^6.2.2",
-    "react-textarea-autosize": "^8.3.3",
-    "react-transition-group": "^4.4.2",
-    "styled-components": "^5.3.3",
-    "sweet-pubsub": "^1.1.2"
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-do-expressions": "^7.16.7",
-    "@babel/preset-env": "^7.16.11",
-    "@next/bundle-analyzer": "^12.1.0",
-    "babel-plugin-styled-components": "^2.0.6",
-    "babel-preset-next": "^1.4.0",
-    "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0"
-  }
+  "author": "Louis",
+  "license": "MIT"
 }
